--- a/pemesanan/pom.xml
+++ b/pemesanan/pom.xml
@@ -127,6 +127,11 @@
 			<artifactId>openpdf</artifactId>
 			<version>1.3.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
