--- a/pemesanan/src/main/resources/application.properties
+++ b/pemesanan/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.thymeleaf.suffix=.html
 
 uploadDir=/resources/static/upload
 ReceiptDir=/resources/static/receipt
-
+ReceiptDpDir=/resources/static/receiptDp
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
@@ -30,11 +30,11 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=maratus.solikha55@gmail.com
-#spring.mail.password=Mar'atussholikha11
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maratus.solikha55@gmail.com
+spring.mail.password=Mar'atussholikha11
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
